# growing_tube_model_estimation

./: .gitignore  pyproject.toml
growing_tube_model_estimation/growing_tube/: __init__.py  _growting_tube_estimation.py
notebooks/: parameter_estimation.ipynb
