[tool.poetry]
name = "growing-tube-model-estimation"
version = "0.0.1a"
description = ""
authors = ["Noshita, Koji <noshita@morphometrics.jp>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "growing_tube_model_estimation"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.24.2"
scipy = "^1.10.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
jupyterlab = "^3.6.3"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
plotly = "^5.14.1"
pandas = "^2.0.0"
scikit-learn = "^1.2.2"
tqdm = "^4.65.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
